[package]
name = "rp1210test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
calamine = "^0.18"
anyhow = "^1"
libloading = "^0.7"
rust-ini="^0.18"
clap = { version = "4.0.32", features = ["derive"] }
